--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
-    <dimen name="fab_margin">48dp</dimen>
+    <dimen name="tvSplash_text_size_min">40dp</dimen>
+    <dimen name="tvSplash_text_size_max">72sp</dimen>
+    <dimen name="top_speedometer_text_max">72sp</dimen>
 </resources>
