--- a/app/src/main/res/values-xlarge-v12/dimens.xml
+++ b/app/src/main/res/values-xlarge-v12/dimens.xml
@@ -1,13 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="speed_text_size"> 400sp </dimen>
+    <dimen name="speed_text_size"> 700sp </dimen>
     <dimen name="km_text_size"> 34sp </dimen>
-    <dimen name="location_text_size"> 20sp </dimen>
-    <dimen name="accuracy_text_size"> 24sp </dimen>
-    <dimen name="direction_text_size"> 24sp </dimen>
-    <dimen name="max_speed_text_size"> 24sp </dimen>
-    <dimen name="lat_long_text_size"> 20sp </dimen>
-    <dimen name="radio_button_size"> 16sp </dimen>
-    <dimen name="top_speedometer_text">48sp </dimen>
+    <dimen name="location_text_size"> 30sp </dimen>
+    <dimen name="accuracy_text_size"> 30sp </dimen>
+    <dimen name="direction_text_size"> 30sp </dimen>
+    <dimen name="max_speed_text_size"> 30sp </dimen>
+    <dimen name="lat_long_text_size"> 24sp </dimen>
+    <dimen name="radio_button_size"> 20sp </dimen>
+    <dimen name="top_speedometer_text"> 100sp </dimen>
     <dimen name="about_icon_size"> 36dp </dimen>
     <dimen name="reset_button_size"> 16sp </dimen>
     <dimen name="tvSpeedometer_margin_top"> 16dp </dimen>
@@ -28,15 +29,11 @@
     <dimen name="tvLong_margin_start"> 16dp </dimen>
     <dimen name="constraintLayout_margin_bottom"> 8dp </dimen>
     <dimen name="tvSplash_margin_top">32dp</dimen>
-    <dimen name="tvSplash_text_size">60sp</dimen>
-    <dimen name="iVSplash_margin_start">0dp</dimen>
-    <dimen name="iVSplash_margin_top">16dp</dimen>
+    <dimen name="tvSplash_text_size">72sp</dimen>
+    <dimen name="iVSplash_margin_start">8dp</dimen>
+    <dimen name="iVSplash_margin_top">72dp</dimen>
     <dimen name="iVSplash_margin_end">8dp</dimen>
-    <dimen name="progressBar_margin_top">8dp</dimen>
-    <dimen name="top_speedometer_text_min">28sp</dimen>
-    <dimen name="tvSplash_text_size_min">40dp</dimen>
-    <dimen name="tvSplash_text_size_max">72sp</dimen>
-    <dimen name="top_speedometer_text_max">72sp</dimen>
-    <dimen name="tv_speed_max">700sp</dimen>
-    <dimen name="tv_speed_min">280sp</dimen>
+    <dimen name="progressBar_margin_top">48dp</dimen>
+    <dimen name="tvSplash_text_size_max">100sp</dimen>
+    <dimen name="top_speedometer_text_max">100sp</dimen>
 </resources>
