--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbarStyle="insideInset"
     tools:context="com.chahal.speedometer.MainActivity">
-    <!-- res/layout/example_activity.xml -->
-    <!--    <androidx.fragment.app.FragmentContainerView-->
-    <!--        android:id="@+id/fragment_container_view"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content" >-->
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -31,10 +28,12 @@
                 android:layout_marginTop="@dimen/tvSpeedometer_margin_top"
                 android:autoSizeMaxTextSize="@dimen/top_speedometer_text_max"
                 android:autoSizeMinTextSize="@dimen/top_speedometer_text_min"
+                android:autoSizeTextType="uniform"
                 android:maxLines="1"
                 android:text="@string/app_name"
                 android:textAlignment="center"
                 android:textSize="@dimen/top_speedometer_text"
+                android:visibility="visible"
                 app:layout_constraintBottom_toTopOf="@+id/tvSpeed"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -57,8 +56,8 @@
 
             <TextView
                 android:id="@+id/tvSpeed"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:autoSizeMaxTextSize="@dimen/tv_speed_max"
                 android:autoSizeMinTextSize="@dimen/tv_speed_min"
                 android:autoSizeStepGranularity="2sp"
@@ -117,6 +116,7 @@
                 android:id="@+id/textView2"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_marginStart="8dp"
                 android:maxLines="1"
                 android:text="@string/accuracy1"
                 android:textAlignment="viewEnd"
@@ -142,7 +142,7 @@
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_marginStart="@dimen/textView3_margin_start"
                 android:layout_marginEnd="@dimen/textView3_margin_end"
                 android:maxLines="1"
@@ -158,16 +158,19 @@
             <TextView
                 android:id="@+id/tvDirection"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:autoSizeMaxTextSize="@dimen/tv_direction_max"
+                android:autoSizeMinTextSize="@dimen/tv_direction_min"
+                android:autoSizeTextType="uniform"
                 android:maxLines="1"
                 android:text="@string/direction"
                 android:textAlignment="viewStart"
                 android:textSize="@dimen/direction_text_size"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textView3"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -313,12 +316,12 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="24dp"
+                android:contentDescription="@string/btn_settings"
                 android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/btnReset"
                 app:layout_constraintTop_toBottomOf="@+id/btnRadioGroup"
-                app:srcCompat="@android:drawable/ic_menu_preferences"
-                android:contentDescription="@string/btn_settings" />
+                app:srcCompat="@android:drawable/ic_menu_preferences" />
 
             <TextView
                 android:id="@+id/textView7"
