--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -17,6 +17,7 @@
         android:textSize="@dimen/tvSplash_text_size"
         android:autoSizeMinTextSize="@dimen/tvSplash_text_size_min"
         android:autoSizeMaxTextSize="@dimen/tvSplash_text_size_max"
+        android:autoSizeTextType="uniform"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/iVSplash"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,7 +26,7 @@
 
     <ImageView
         android:id="@+id/iVSplash"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="@dimen/iVSplash_margin_start"
         android:layout_marginTop="@dimen/iVSplash_margin_top"
@@ -41,6 +42,7 @@
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
