--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,5 +1,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:title="Settings"
+    app:title="Settings">
 
     <PreferenceCategory app:title="App Settings">
 
@@ -8,17 +10,18 @@
             android:entryValues="@array/speedFontAlias"
             app:key="Speed_Font"
             app:title="@string/speed_font" />
-        <EditTextPreference
-            android:entries="@array/appFont"
-            android:entryValues="@array/appFontAlias"
-            app:key="App Font"
-            app:title="@string/app_font" />
+        <ListPreference
+            android:entries="@array/speedColor"
+            android:entryValues="@array/speedColorAlias"
+            app:key="@string/key_speed_color"
+            app:title="@string/speed_color" />
+
     </PreferenceCategory>
 
     <PreferenceCategory app:title="@string/app_theme">
 
         <SwitchPreferenceCompat
-            app:key="App_Theme"
+            app:key="@string/key_app_theme"
             app:title="@string/app_theme_dark" />
     </PreferenceCategory>
     <PreferenceCategory app:title="@string/app_unit_type">
@@ -26,8 +29,15 @@
         <ListPreference
             android:entries="@array/unitType"
             android:entryValues="@array/unitTypeAlias"
-            app:key="Unit_Type"
+            app:key="@string/key_unit_type"
             app:title="@string/unit_type" />
+    </PreferenceCategory>
+    <PreferenceCategory app:title="@string/speed_bubble_header">
+
+        <SwitchPreferenceCompat
+            app:key="@string/key_float_speed"
+            app:title="@string/speed_bubble_header" />
+
     </PreferenceCategory>
 
 
