--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbarStyle="insideInset"
+    android:id="@+id/fragmentLayout"
     tools:context="com.chahal.speedometer.MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -58,10 +59,11 @@
                 android:id="@+id/tvSpeed"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:autoSizeTextType="uniform"
+                android:autoSizePresetSizes="@arrays/autosize_text_sizes"
                 android:autoSizeMaxTextSize="@dimen/tv_speed_max"
                 android:autoSizeMinTextSize="@dimen/tv_speed_min"
                 android:autoSizeStepGranularity="2sp"
-                android:autoSizeTextType="uniform"
                 android:fontFamily="@font/texazgxxaq"
                 android:maxLines="1"
                 android:text="@string/_100"
@@ -251,7 +253,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginBottom="@dimen/constraintLayout_margin_bottom"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -265,6 +267,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 app:layout_constraintBottom_toTopOf="@+id/btnReset"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -308,30 +311,31 @@
                 android:textSize="@dimen/reset_button_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/btnSettings"
-                app:layout_constraintStart_toEndOf="@+id/textView7"
+                app:layout_constraintStart_toEndOf="@+id/btnAboutMe"
                 app:layout_constraintTop_toBottomOf="@+id/btnRadioGroup" />
 
             <ImageButton
                 android:id="@+id/btnSettings"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:contentDescription="@string/btn_settings"
-                android:visibility="invisible"
+                android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/btnReset"
                 app:layout_constraintTop_toBottomOf="@+id/btnRadioGroup"
                 app:srcCompat="@android:drawable/ic_menu_preferences" />
 
-            <TextView
-                android:id="@+id/textView7"
+            <ImageButton
+                android:id="@+id/btnAboutMe"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="31dp"
                 app:layout_constraintEnd_toStartOf="@+id/btnReset"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btnRadioGroup" />
+                app:layout_constraintTop_toBottomOf="@+id/btnRadioGroup"
+                app:srcCompat="@android:drawable/ic_menu_recent_history"
+                tools:ignore="ContentDescription" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
