--- a/app/src/main/res/values-w600dp/dimens.xml
+++ b/app/src/main/res/values-w600dp/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="tvSplash_text_size_min">50dp</dimen>
     <dimen name="tvSplash_text_size_max">60sp</dimen>
     <dimen name="top_speedometer_text_max">72sp</dimen>
+    <dimen name="tv_speed_max">700sp</dimen>
+    <dimen name="tv_speed_min">280sp</dimen>
+
 </resources>
