--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:scrollbarStyle="insideInset"
     android:id="@+id/fragmentLayout"
-    tools:context="com.chahal.speedometer.MainActivity">
+    tools:context="com.chahal.speedometer.activity.MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -59,11 +59,9 @@
                 android:id="@+id/tvSpeed"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:autoSizeTextType="uniform"
-                android:autoSizePresetSizes="@arrays/autosize_text_sizes"
                 android:autoSizeMaxTextSize="@dimen/tv_speed_max"
                 android:autoSizeMinTextSize="@dimen/tv_speed_min"
-                android:autoSizeStepGranularity="2sp"
+                android:autoSizeTextType="uniform"
                 android:fontFamily="@font/texazgxxaq"
                 android:maxLines="1"
                 android:text="@string/_100"
@@ -335,7 +333,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btnRadioGroup"
                 app:srcCompat="@android:drawable/ic_menu_recent_history"
-                tools:ignore="ContentDescription" />
+                tools:ignore="ContentDescription"
+                tools:visibility="invisible" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
