--- a/app/src/main/res/values-w480dp-h854dp/dimens.xml
+++ b/app/src/main/res/values-w480dp-h854dp/dimens.xml
@@ -38,4 +38,6 @@
     <dimen name="tvSplash_text_size_min">40dp</dimen>
     <dimen name="tvSplash_text_size_max">72sp</dimen>
     <dimen name="top_speedometer_text_max">80sp</dimen>
+    <dimen name="tv_speed_max">700sp</dimen>
+    <dimen name="tv_speed_min">280sp</dimen>
 </resources>
