--- a/app/src/main/res/layout/about_dialog.xml
+++ b/app/src/main/res/layout/about_dialog.xml
@@ -42,7 +42,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvAppName"
             app:srcCompat="@mipmap/ic_launcher_round"
-            android:contentDescription="@string/speedometer_logo" />
+            android:contentDescription="@string/string_speedometer_logo" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ScrollView
