--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbarStyle="insideInset"
-    android:id="@+id/fragmentLayout"
     tools:context="com.chahal.speedometer.activity.MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/fragmentLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -48,7 +48,7 @@
                 android:layout_marginTop="24dp"
                 android:background="@mipmap/ic_launcher_round"
                 android:backgroundTintMode="screen"
-                android:contentDescription="@string/btn_about"
+                android:contentDescription="@string/string_btn_about"
                 android:scaleType="fitStart"
                 android:visibility="visible"
                 app:layout_constraintBottom_toTopOf="@+id/tvSpeed"
@@ -64,9 +64,11 @@
                 android:autoSizeTextType="uniform"
                 android:fontFamily="@font/texazgxxaq"
                 android:maxLines="1"
-                android:text="@string/_100"
+                android:text="@string/string_100"
                 android:textAlignment="center"
                 android:textSize="@dimen/speed_text_size"
+                android:typeface="normal"
+                android:visibility="visible"
                 app:layout_constraintBottom_toTopOf="@+id/tvCurrentLocation"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +78,7 @@
                 android:id="@+id/tvUnits"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/km_h"
+                android:text="@string/string_km_h"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textSize="@dimen/km_text_size"
@@ -92,7 +94,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/tvCurrentLocation_margin_bottom"
                 android:maxLines="2"
-                android:text="@string/current_location"
+                android:text="@string/string_current_location"
                 android:textAlignment="center"
                 android:textSize="@dimen/location_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -108,7 +110,6 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toTopOf="@+id/maxSpeedLayout"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/speedLayout">
 
@@ -118,7 +119,7 @@
                 android:layout_height="0dp"
                 android:layout_marginStart="8dp"
                 android:maxLines="1"
-                android:text="@string/accuracy1"
+                android:text="@string/string_accuracy1"
                 android:textAlignment="viewEnd"
                 android:textSize="@dimen/accuracy_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -132,7 +133,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/tvAccuracy_margin_start"
                 android:maxLines="1"
-                android:text="@string/accuracy"
+                android:text="@string/string_accuracy"
                 android:textSize="@dimen/accuracy_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/textView3"
@@ -146,7 +147,7 @@
                 android:layout_marginStart="@dimen/textView3_margin_start"
                 android:layout_marginEnd="@dimen/textView3_margin_end"
                 android:maxLines="1"
-                android:text="@string/direction1"
+                android:text="@string/string_direction1"
                 android:textSize="@dimen/direction_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/tvDirection"
@@ -159,12 +160,11 @@
                 android:id="@+id/tvDirection"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:autoSizeMaxTextSize="@dimen/tv_direction_max"
-                android:autoSizeMinTextSize="@dimen/tv_direction_min"
-                android:autoSizeTextType="uniform"
                 android:maxLines="1"
-                android:text="@string/direction"
-                android:textAlignment="viewStart"
+                android:autoSizeMinTextSize="@dimen/tv_direction_min"
+                android:autoSizeMaxTextSize="@dimen/tv_direction_max"
+                android:text="@string/string_direction"
+                android:textAlignment="textStart"
                 android:textSize="@dimen/direction_text_size"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -178,7 +178,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/maxSpeedLayout_margin_top"
-            app:layout_constraintBottom_toTopOf="@+id/latLongLayout"
+            app:layout_constraintBottom_toTopOf="@+id/extrasLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/accuracyLayout">
@@ -187,7 +187,7 @@
                 android:id="@+id/textView4"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/maxSpeed"
+                android:text="@string/string_maxSpeed"
                 android:textAlignment="viewEnd"
                 android:textSize="@dimen/max_speed_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -200,14 +200,90 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/tvMaxSpeed_margin_start"
-                android:text="@string/max_speed"
+                android:text="@string/string_max_speed"
                 android:textAlignment="viewStart"
+                android:maxLines="1"
                 android:textColor="#f54b42"
                 android:textSize="@dimen/max_speed_text_size"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textView4"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/extrasLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/maxSpeedLayout_margin_top"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/maxSpeedLayout"
+            app:layout_constraintBottom_toTopOf="@+id/altitudeLayout">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/string_extras"
+                android:textAlignment="viewEnd"
+                android:textSize="@dimen/max_speed_text_size"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/tvExtras"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tvExtras"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/tvMaxSpeed_margin_start"
+                android:text="@string/string_0"
+                android:textAlignment="viewStart"
+                android:textSize="@dimen/max_speed_text_size"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textView5"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/altitudeLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/maxSpeedLayout_margin_top"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/extrasLayout"
+            app:layout_constraintBottom_toTopOf="@+id/latLongLayout">
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/string_altitude"
+                android:textAlignment="viewEnd"
+                android:textSize="@dimen/max_speed_text_size"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/tvAltitude"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tvAltitude"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/tvMaxSpeed_margin_start"
+                android:text="@string/string_0"
+                android:textAlignment="viewStart"
+                android:textSize="@dimen/max_speed_text_size"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textView6"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
 
@@ -221,14 +297,14 @@
             app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/maxSpeedLayout">
+            app:layout_constraintTop_toBottomOf="@+id/altitudeLayout">
 
             <TextView
                 android:id="@+id/tvLat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
-                android:text="@string/loading"
+                android:text="@string/string_loading"
                 android:textSize="@dimen/lat_long_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/tvLong"
@@ -240,7 +316,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:text="@string/loading"
+                android:text="@string/string_loading"
                 android:textSize="@dimen/lat_long_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -276,7 +352,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
-                    android:text="@string/km_h"
+                    android:text="@string/string_km_h"
                     android:textSize="@dimen/radio_button_size"
                     tools:layout_editor_absoluteX="106dp"
                     tools:layout_editor_absoluteY="644dp" />
@@ -285,14 +361,14 @@
                     android:id="@+id/btnRbMh"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/m_h"
+                    android:text="@string/string_m_h"
                     android:textSize="@dimen/radio_button_size" />
 
                 <RadioButton
                     android:id="@+id/btnRbMs"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/m_s"
+                    android:text="@string/string_m_s"
                     android:textSize="@dimen/radio_button_size"
                     tools:layout_editor_absoluteX="236dp"
                     tools:layout_editor_absoluteY="645dp" />
@@ -305,7 +381,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="8dp"
-                android:text="@string/reset"
+                android:text="@string/string_reset"
                 android:textSize="@dimen/reset_button_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/btnSettings"
@@ -317,7 +393,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:contentDescription="@string/btn_settings"
+                android:contentDescription="@string/string_btn_settings"
                 android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/btnReset"
@@ -333,8 +409,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btnRadioGroup"
                 app:srcCompat="@android:drawable/ic_menu_recent_history"
-                tools:ignore="ContentDescription"
-                tools:visibility="invisible" />
+                tools:ignore="ContentDescription" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
